Skip to content

Seeking chapters not working correctly

On certain .mkv format files, when you manually click into the seek bar, then hit the next chapter button, it will instead send you back to the start of the current chapter, even if it's several minutes ago. Hitting the next chapter button again will then correctly seek forwards to the next chapter. Confirmed in both 2.2.4 and 3.0.0 nightly with refp on irc.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information